@@ -50,6 +50,7 @@ Changelog
  * Fix: Response header (content disposition) now correctly handles filenames with non-ascii characters when using a storage backend (Rich Brennan)
  * Fix: Improved accessibility fixes for `main`, `header` and `footer` elements in the admin page layout (Mitchel Cabuloy)
  * Fix: Prevent version number from obscuring long settings menus (Naomi Morduch Toubman)
+ * Fix: Admin views using TemplateResponse now respect the user's language setting (Jacob Topp-Mugglestone)
 
 
 2.8.1 (14.04.2020)
